  * Fixed the segfault associated with the DR spectrometer reader
  * Cleaned up how splitDRX.py offsets in a file
  * Removed splitTBW.py since it is no longer needed
  * Fixed a few bugs in the SDF parser dealing the logging keywords
  * Modified lsl.common.metabundle.getSessionDefinition to use the SDF in the tarball rather than generate it from the session and observation specification files

0.5.0
  * Worked on adding better polarization support to correlator.fx and correlator.uvUtils
  * Updated the correlateTBN script to make full polarization support possible
  * Added a crude deconvolution routine that should work with the AIPY ImgW images
  * Worked on adding in support for binary packed SSMIF files in lsl.common.stations
  * Worked on adding in support for binary packed SDM files via a new lsl.common.sdm module
  * Worked on adding in support for the various MCS meta-data tarball file formats
  * Moved the SDF module out of SessionSchedules and into lsl.common
  * Added functions to generate the TBN and DRX filter magnitude response
  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
  * Added a basic SSMIF file for the north arm site (LWA-2)
  * Added a preliminary module for incoherent dedispersion lsl.misc.dedispersion
  * Added support for spectral kurtosis via lsl.statistics.kurtosis
  * Updated the dependency list
  * Cleaned up the TBN ring buffer using deques and OrderedDicts
  * Added support for reading the TBN tuning word/frequency and gain from a TBN frame
  * Added support for reading the DRX tuning word/frequency from a DRX frame
  * Added support for stepped SDF files that specify the delays and gains to use
  * Added support for ARX board/channel responses via a new common.stations.ARX class
  * Removed the misc.beamformer.fftDelayAndSum functions in favor of phase-and-sum beamforming