@@ -158,9 +158,16 @@ def main(args):
 
 	fh = open(dataFile, "rb")
 	nFramesFile = os.path.getsize(dataFile) / drx.FrameSize
-	junkFrame = drx.readFrame(fh)
 	
-	fh.seek(0)
+	while True:
+		junkFrame = drx.readFrame(fh)
+		try:
+			srate = junkFrame.getSampleRate()
+			break
+		except ZeroDivisionError:
+			pass
+	fh.seek(-drx.FrameSize, 1)
+	
 	srate = junkFrame.getSampleRate()
 	beams = drx.getBeamCount(fh)
 	tunepols = drx.getFramesPerObs(fh)
