@@ -5,6 +5,8 @@
   * Removed splitTBW.py since it is no longer needed
   * Fixed a few bugs in the SDF parser dealing the logging keywords
   * Modified lsl.common.metabundle.getSessionDefinition to use the SDF in the tarball rather than generate it from the session and observation specification files
+  * Made drxSpectra.py robust against DRX frames with decimation of zero
+  * Made the SDF parser more robust against single word names
 
 0.5.0
   * Worked on adding better polarization support to correlator.fx and correlator.uvUtils
